--- a/Main.html
+++ b/Main.html
@@ -23,13 +23,13 @@
         <nav class="navbar">
 
             <div class="logo">
-                <a href="#">
+                <a href="Main.html">
                     <img src="Movie_img/logo.png" alt="Logo" class="logo-img">
                     Campe <span>Movies</span>
                 </a>
             </div>
             <ul class="nav-links">
-                <li> <a href="#">Movies</a></li>
+                <li> <a href="Main.html">Movies</a></li>
                 <li> <a href="#">Series</a></li>
             </ul>
 
@@ -48,8 +48,9 @@
     <main>
         <div class="movie-gallery">
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/Harry_Potter_1.jpg" alt="HARRY POTTER AND THE PHILOSOPHERS STONE">
-                <p>HARRY POTTER AND THE PHILOSOPHER’S STONE</p>
+                <p>HARRY POTTER AND THE PHILOSOPHER’S STONE</p></a>
             </div>
 
             <div class="movie-item">
@@ -57,6 +58,99 @@
                 <p>HARRY POTTER AND THE CHAMBER OF SECRETS</p>
             </div>
 
+            <div class="movie-item">
+                <img src="Movie_img/HP_3.jpg" alt="HARRY POTTER AND THE PRISONER OF AZKABAN">
+                <p>HARRY POTTER AND THE PRISONER OF AZKABAN</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/HP_4.jpg" alt="HARRY POTTER AND THE GOBLET OF FIRE">
+                <p>HARRY POTTER AND THE GOBLET OF FIRE</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/HP_5.jpg" alt="HARRY POTTER AND THE ORDER OF THE PHOENIX">
+                <p>HARRY POTTER AND THE ORDER OF THE PHOENIX</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/HP_6.jpg" alt="HARRY POTTER AND THE HALF-BLOOD PRINCE">
+                <p>HARRY POTTER AND THE HALF-BLOOD PRINCE</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/hp_7.jpg" alt="HARRY POTTER AND THE DEATHLY HALLOWS: PART 1">
+                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 1</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/HP_8.jpg" alt="HARRY POTTER AND THE DEATHLY HALLOWS: PART 2">
+                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 2</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF1.jpg" alt="The Fast and the Furious (2001)">
+                <p>The Fast and the Furious (2001)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF2.jpg" alt="2 Fast 2 Furious (2003)">
+                <p>2 Fast 2 Furious (2003)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FaF3.jpg" alt="The Fast and the Furious: Tokyo Drift (2006)">
+                <p>The Fast and the Furious: Tokyo Drift (2006)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF4.jpg" alt="Fast & Furious (2009)">
+                <p>Fast & Furious (2009)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF5.jpg" alt="Fast Five (2011)">
+                <p>Fast Five (2011)</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF6.jpg" alt="Fast & Furious 6 (2013)">
+                <p>Fast & Furious 6 (2013)</p>
+            </div>
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF7.jpg" alt="Furious 7 (2015)">
+                <p>Furious 7 (2015)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF8.jpg" alt="The Fate of the Furious (2017)">
+                <p>The Fate of the Furious (2017)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF9.jpg" alt="Fast & Furious Presents: Hobbs & Shaw (2019)">
+                <p>Fast & Furious Presents: Hobbs & Shaw (2019)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/F10.jpg" alt="F9 (2021)">
+                <p>F9 (2021)</p>
+            </div>
+
+
+            <div class="movie-item">
+                <img src="Movie_img/FAF11.jpg" alt="Fast X (2023)">
+                <p>Fast X (2023)</p>
+            </div>
 
 
 
