--- a/HP_4/HP_4.html
+++ b/HP_4/HP_4.html
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campe Movies</title>
-    <link rel="stylesheet" href="StyleHP1.css">
-    <link rel="shortcut icon" href="Movie_img/logo.png" type="image/x-icon"> <!--Logo uit canva -->
+    <link rel="stylesheet" href="HP_4.css">
+    <link rel="shortcut icon" href="../Movie_img/logo.png" type="image/x-icon"> <!--Logo uit canva -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     <!--Link naar google fonts "invoeren van incons enz..." -->
@@ -29,7 +29,7 @@
             </div>
             <ul class="nav-links">
                 <li> <a href="../Main.html">Movies</a></li>
-                
+                <li> <a href="#">Series</a></li>
             </ul>
 
 
@@ -43,12 +43,12 @@
     </header>
 <div class="movie-box">
     <div class="movie-foto">
-        <img src="../Movie_img/Harry_Potter_1.jpg" alt="HARRY POTTER AND THE PHILOSOPHERS STONE">
+        <img src="../Movie_img/HP_4.jpg" alt="HARRY POTTER AND THE GOBLET OF FIRE">
     
     </div>
     <div class="informatie">
-        <h2> HARRY POTTER AND THE PHILOSOPHERS STONE</h2>
-        <p>Harry Potter has lived under the stairs at his aunt and uncle's house his whole life. But on his 11th birthday, he learns he's a powerful wizard—with a place waiting for him at the Hogwarts School of Witchcraft and Wizardry. As he learns to harness his newfound powers with the help of the school's kindly headmaster, Harry uncovers the truth about his parents' deaths—and about the villain who's to blame.</p>
+        <h2> HARRY POTTER AND THE CHAMBER OF SECRETS</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in consequat urna. Donec turpis enim, congue non gravida dapibus, porttitor nec diam. Morbi porta ligula quis gravida porta. Nulla metus dolor, pharetra ut egestas eu, facilisis eu nunc. Aliquam arcu eros, auctor at mattis et, tincidunt ut eros. Aliquam ac leo aliquam, mattis purus at, semper lectus. Aenean vitae sagittis dui, ut auctor libero. Integer commodo imperdiet lectus sed aliquam. Curabitur quis ligula at nibh facilisis condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla fringilla eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin molestie tempor leo ac dignissim. Cras ut orci auctor, porta orci at, euismod urna. Pellentesque id viverra nisi. Praesent nec diam ac ex venenatis dapibus..</p>
     </div>
 </div>
 
@@ -56,26 +56,23 @@
 <div class="gerelateerdefilms">
     <h2>gerelateerdefilms</h2>
     <div class="gerelateerdeitem">
-        <a href="../HP_2/HP_2.html">
-        <img src="../Movie_img/HP_2.jpg" alt="Harry Potter and the chamber of secrets">
-        <p>Harry Potter and the chamber of secrets</p></a>
+        <img src="../Movie_img/hp_7.jpg" alt="the deathly hallows part 1">
+        <p>Harry Potter and the deathly hallows part 1</p>
     </div>
 
     <div class="gerelateerdeitem">
-        <a href="../HP_3/HP_3.html">
         <img src="../Movie_img/HP_3.jpg" alt="Harry Potter and the prisoner of azkaban">
         <p>Harry Potter and the prisoner of azkaban</p>
-    </a>
     </div>
 
     <div class="gerelateerdeitem">
-       <a href="../HP_4/HP_4.html"> <img src="../Movie_img/HP_4.jpg" alt="Harry Potter and the goblet Of fire">
-        <p>Harry Potter and the goblet of fire</p></a>
+        <img src="../Movie_img/HP_8.jpg" alt="Harry Potter and the deathly hallows part 2">
+        <p>Harry Potter and the deathly hallows part 2</p>
     </div>
 
     <div class="gerelateerdeitem">
-       <a href="../HP_5/HP_5.html"> <img src="../Movie_img/HP_5.jpg" alt="Harry Potter and the order of phoenix">
-        <p>Harry Potter and the order of phoenix</p></a>
+        <img src="../Movie_img/HP_5.jpg" alt="Harry Potter and the order of phoenix">
+        <p>Harry Potter and the order of phoenix</p>
     </div>
 </div>
     </body>
