--- a/Main.html
+++ b/Main.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campe Movies</title>
     <link rel="stylesheet" href="Style.css">
-    <link rel="shortcut icon" href="Movie_img/logo.png" type="image/x-icon"> <!--Logo gemaakt uit canva -->
+    <link rel="shortcut icon" href="/Movie_img/logo.png" type="image/x-icon"> <!--Logo gemaakt uit canva -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     <!--Link naar google fonts "invoeren van incons enz..." -->
@@ -37,6 +37,9 @@
             <div class="search-box">
                 <input type="search-txt" name="" placeholder="Zoeken">
                 <a class="search-btn" href="#"> <span class="material-symbols-outlined">Zoeken</span></a>
+            </div>
+
+            <div class="login"> <a href="/Login/login.html"><button>Login</button></a>
             </div>
 
         </nav>
@@ -159,7 +162,7 @@
         </div>
 
     </main>
-
+<footer><p>&copy; All rights reserved to Gabriel 2025</p></footer>
 </body>
 
 </html>
