--- a/HP_1/HP_stone.html
+++ b/HP_1/HP_stone.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campe Movies</title>
     <link rel="stylesheet" href="StyleHP1.css">
-    <link rel="shortcut icon" href="Movie_img/logo.png" type="image/x-icon"> <!--Logo uit canva -->
+    <link rel="shortcut icon" href="../Movie_img/logo.png" type="image/x-icon"> <!--Logo uit canva -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
     <!--Link naar google fonts "invoeren van incons enz..." -->
