--- a/ADMIN/admin.html
+++ b/ADMIN/admin.html
@@ -30,7 +30,7 @@
             </div>
             <ul class="nav-links">
                 <li> <a href="../Main.html">Movies</a></li>
-                
+
             </ul>
 
 
@@ -39,22 +39,127 @@
                 <a class="search-btn" href="#"> <span class="material-symbols-outlined">Zoeken</span></a>
             </div>
 
-            <div class="login"> <a href="/Login/login.html"><button>Login</button></a>
-            </div>
-
         </nav>
 
     </header>
 
 
-
+<div class="table-container">
     <table>
-        <thead> 
+        <thead>
             <tr>
                 <th>Film</th>
-                <th>Datum</th>
+                <th>Aanpassingen</th>
+                <th>Delete</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>HARRY POTTER AND THE PHILOSOPHER’S STONE</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>HARRY POTTER AND THE CHAMBER OF SECRETS</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>HARRY POTTER AND THE PRISONER OF AZKABAN</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>HARRY POTTER AND THE GOBLET OF FIRE</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>HARRY POTTER AND THE ORDER OF THE PHOENIX</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>HARRY POTTER AND THE HALF-BLOOD PRINCE</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>HARRY POTTER AND THE DEATHLY HALLOWS: PART 1</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>HARRY POTTER AND THE DEATHLY HALLOWS: PART 2</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>The Fast and the Furious (2001)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>2 Fast 2 Furious (2003)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>The Fast and the Furious: Tokyo Drift (2006)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>Fast & Furious (2009)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>Fast Five (2011)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>Fast & Furious 6 (2013)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>Furious 7 (2015)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>The Fate of the Furious (2017)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+            <tr>
+                <td>Fast & Furious Presents: Hobbs & Shaw (2019)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>F9 (2021)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+            <tr>
+                <td>Fast X (2023)</td>
+                <td><a href="#">Aanpassen</a></td>
+                <td><a href="#">Verwijderen</a></td>
+            </tr>
+
+</div>
+        </tbody>
     </table>
 
 </body>
