--- a/HP_1/HP_stone.html
+++ b/HP_1/HP_stone.html
@@ -49,6 +49,28 @@
     <div class="informatie">
         <h2> HARRY POTTER AND THE PHILOSOPHERS STONE</h2>
         <p>Harry Potter has lived under the stairs at his aunt and uncle's house his whole life. But on his 11th birthday, he learns he's a powerful wizard—with a place waiting for him at the Hogwarts School of Witchcraft and Wizardry. As he learns to harness his newfound powers with the help of the school's kindly headmaster, Harry uncovers the truth about his parents' deaths—and about the villain who's to blame.</p>
+        
+        <h4>Hoofdcast:</h4>
+        <p>
+            Daniel Radcliffe - Harry Potter
+            Rupert Grint - Ron Weasley
+            Emma Watson - Hermione Granger
+            Docenten en personeel van Zweinstein:
+            Richard Harris - Professor Albus Dumbledore
+            Maggie Smith - Professor Minerva McGonagall
+            Robbie Coltrane - Rubeus Hagrid
+            Alan Rickman - Professor Severus Snape
+            Ian Hart - Professor Quirinus Quirrell
+            Familie van Harry:
+            Fiona Shaw - Petunia Dursley
+            Richard Griffiths - Vernon Dursley
+            Harry Melling - Dudley Dursley</p>
+           <h4> Overige belangrijke personages:</h4>
+            <p>Tom Felton - Draco Malfoy
+            Matthew Lewis - Neville Longbottom
+            Bonnie Wright - Ginny Weasley
+            John Cleese - Nearly Headless Nick (De Grijze Dame)
+            Julie Walters - Molly Weasley</p>
     </div>
 </div>
 
