--- a/HP_1/HP_stone.html
+++ b/HP_1/HP_stone.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Jersey+15&display=swap');
         </style> <!--Google fonts voor arsenal font -->
@@ -29,6 +30,8 @@
             </div>
             <ul class="nav-links">
                 <li> <a href="../Main.html">Movies</a></li>
+                <li> <a href="#">Series</a></li>
+                <li> <a href="#">Contact</a></li>
                 
             </ul>
 
@@ -65,12 +68,8 @@
             Fiona Shaw - Petunia Dursley
             Richard Griffiths - Vernon Dursley
             Harry Melling - Dudley Dursley</p>
-           <h4> Overige belangrijke personages:</h4>
-            <p>Tom Felton - Draco Malfoy
-            Matthew Lewis - Neville Longbottom
-            Bonnie Wright - Ginny Weasley
-            John Cleese - Nearly Headless Nick (De Grijze Dame)
-            Julie Walters - Molly Weasley</p>
+           <h4> Genre: <span>Fantasy</span></h4>
+            <p></p>
     </div>
 </div>
 
