--- a/Main.html
+++ b/Main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -30,13 +31,15 @@
             </div>
             <ul class="nav-links">
                 <li> <a href="Main.html">Movies</a></li>
+                <li> <a href="#">Series</a></li>
+                <li> <a href="#">Contact</a></li>
                 
             </ul>
 
 
             <div class="search-box">
                 <input type="search-txt" name="" placeholder="Zoeken">
-                <a class="search-btn" href="#"> <span class="material-symbols-outlined">Zoeken</span></a>
+                <a class="search-btn" href="#"> <span class="search">Zoeken</span></a>
             </div>
 
             <div class="login"> <a href="/Login/login.html"><button>Login</button></a>
@@ -57,102 +60,120 @@
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_2.jpg" alt="HARRY POTTER AND THE CHAMBER OF SECRETS">
-                <p>HARRY POTTER AND THE CHAMBER OF SECRETS</p>
+                <p>HARRY POTTER AND THE CHAMBER OF SECRETS</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_3.jpg" alt="HARRY POTTER AND THE PRISONER OF AZKABAN">
-                <p>HARRY POTTER AND THE PRISONER OF AZKABAN</p>
+                <p>HARRY POTTER AND THE PRISONER OF AZKABAN</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_4.jpg" alt="HARRY POTTER AND THE GOBLET OF FIRE">
-                <p>HARRY POTTER AND THE GOBLET OF FIRE</p>
+                <p>HARRY POTTER AND THE GOBLET OF FIRE</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_5.jpg" alt="HARRY POTTER AND THE ORDER OF THE PHOENIX">
-                <p>HARRY POTTER AND THE ORDER OF THE PHOENIX</p>
+                <p>HARRY POTTER AND THE ORDER OF THE PHOENIX</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_6.jpg" alt="HARRY POTTER AND THE HALF-BLOOD PRINCE">
-                <p>HARRY POTTER AND THE HALF-BLOOD PRINCE</p>
+                <p>HARRY POTTER AND THE HALF-BLOOD PRINCE</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/hp_7.jpg" alt="HARRY POTTER AND THE DEATHLY HALLOWS: PART 1">
-                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 1</p>
+                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 1</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/HP_8.jpg" alt="HARRY POTTER AND THE DEATHLY HALLOWS: PART 2">
-                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 2</p>
+                <p>HARRY POTTER AND THE DEATHLY HALLOWS: PART 2</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF1.jpg" alt="The Fast and the Furious (2001)">
-                <p>The Fast and the Furious (2001)</p>
+                <p>The Fast and the Furious (2001)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF2.jpg" alt="2 Fast 2 Furious (2003)">
-                <p>2 Fast 2 Furious (2003)</p>
+                <p>2 Fast 2 Furious (2003)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FaF3.jpg" alt="The Fast and the Furious: Tokyo Drift (2006)">
-                <p>The Fast and the Furious: Tokyo Drift (2006)</p>
+                <p>The Fast and the Furious: Tokyo Drift (2006)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF4.jpg" alt="Fast & Furious (2009)">
-                <p>Fast & Furious (2009)</p>
+                <p>Fast & Furious (2009)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF5.jpg" alt="Fast Five (2011)">
-                <p>Fast Five (2011)</p>
+                <p>Fast Five (2011)</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF6.jpg" alt="Fast & Furious 6 (2013)">
-                <p>Fast & Furious 6 (2013)</p>
+                <p>Fast & Furious 6 (2013)</p></a>
             </div>
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF7.jpg" alt="Furious 7 (2015)">
-                <p>Furious 7 (2015)</p>
+                <p>Furious 7 (2015)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF8.jpg" alt="The Fate of the Furious (2017)">
-                <p>The Fate of the Furious (2017)</p>
+                <p>The Fate of the Furious (2017)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF9.jpg" alt="Fast & Furious Presents: Hobbs & Shaw (2019)">
-                <p>Fast & Furious Presents: Hobbs & Shaw (2019)</p>
+                <p>Fast & Furious Presents: Hobbs & Shaw (2019)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/F10.jpg" alt="F9 (2021)">
-                <p>F9 (2021)</p>
+                <p>F9 (2021)</p></a>
             </div>
 
 
             <div class="movie-item">
+                <a href="./HP_1/HP_stone.html">
                 <img src="Movie_img/FAF11.jpg" alt="Fast X (2023)">
-                <p>Fast X (2023)</p>
+                <p>Fast X (2023)</p></a>
             </div>
 
 
