--- a/ADMIN/admin.html
+++ b/ADMIN/admin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -56,105 +57,105 @@
         <tbody>
             <tr>
                 <td>HARRY POTTER AND THE PHILOSOPHER’S STONE</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>HARRY POTTER AND THE CHAMBER OF SECRETS</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>HARRY POTTER AND THE PRISONER OF AZKABAN</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>HARRY POTTER AND THE GOBLET OF FIRE</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>HARRY POTTER AND THE ORDER OF THE PHOENIX</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>HARRY POTTER AND THE HALF-BLOOD PRINCE</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>HARRY POTTER AND THE DEATHLY HALLOWS: PART 1</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>HARRY POTTER AND THE DEATHLY HALLOWS: PART 2</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>The Fast and the Furious (2001)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>2 Fast 2 Furious (2003)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>The Fast and the Furious: Tokyo Drift (2006)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>Fast & Furious (2009)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>Fast Five (2011)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>Fast & Furious 6 (2013)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>Furious 7 (2015)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>The Fate of the Furious (2017)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
             <tr>
                 <td>Fast & Furious Presents: Hobbs & Shaw (2019)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>F9 (2021)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
             <tr>
                 <td>Fast X (2023)</td>
-                <td><a href="#">Aanpassen</a></td>
+                <td><a href="../ADMIN/aanpassen/aanpassen.html">Aanpassen</a></td>
                 <td><a href="#">Verwijderen</a></td>
             </tr>
 
