--- a/HP_3/HP_3.html
+++ b/HP_3/HP_3.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Jersey+15&display=swap');
         </style> <!--Google fonts voor arsenal font -->
